--- a/page1.html
+++ b/page1.html
@@ -10,24 +10,23 @@
 
 <ul>
     <li>MENU</li>
-    <li class="rightPart"><a href="page2.html">Services</a></li>
-    <li class="rightPart"><a href="page2.html">Projects</a></li>
-    <li class="rightPart"><a href="page2.html">About</a></li>
+    <li class="rightPart"><a href="page2.html#Services">Services</a></li>
+    <li class="rightPart"><a href="page2.html#Projects">Projects</a></li>
+    <li class="rightPart"><a href="page2.html#About">About</a></li>
 </ul>
 
 <div class="firstPart">
-    <div class="firstBackground">
-        <div class="firstPartWindow">
-            <div class="firstLine">DON'T WAIT</div>
-            <div class="secondLine">IMPROVE<br>YOUR BUSINESS<br>TODAY!</div>
-            <div class="thirdLine"><strong><em>- Get your hands on MyBiz -</em></strong></div>
-            <form class="signUp">
-                <label>
-                    <input type="text">
-                </label>
-                <button class="button">SIGN UP FOR FREE!</button>
-            </form>
-        </div>
+    <div class="lawyer"></div>
+    <div class="lawyerWindow">
+        <div class="firstLine">DON'T WAIT</div>
+        <div class="secondLine">IMPROVE<br>YOUR BUSINESS<br>TODAY!</div>
+        <div class="thirdLine"><strong><em>- Get your hands on MyBiz -</em></strong></div>
+        <form class="signUp">
+            <label>
+                <input type="text">
+            </label>
+            <button class="button">SIGN UP FOR FREE!</button>
+        </form>
     </div>
 </div>
 
@@ -66,18 +65,18 @@
 <div class="thirdPart">
     <p class="quote">"I COULDN'T HAVE ASKED FOR MORE THAN THIS. MYBIZ IS THE NEXT KILLER APP."</p>
     <div class="author">
-        <span><strong>John Doe</strong></span>, CEO & Founder, MyBiz
+        <span>John Doe</span>, CEO & Founder, MyBiz
     </div>
 </div>
 
 <div class="forthPart">
-    <div class="secondBackground"></div>
+    <div class="glasses"></div>
     <div class="prices">
         <p class="price">PRICES</p>
         <p class="description">AFFORDABLE FOR EVERYONE</p>
     </div>
     <div class="basic">
-        <div class="planBackground"></div>
+        <div class="grid"></div>
         <div class="planName">
             BASIC PLAN
         </div>
@@ -94,7 +93,7 @@
         <button class="buy">BUY NOW</button>
     </div>
     <div class="standard">
-        <div class="planBackground"></div>
+        <div class="grid"></div>
         <div class="planName">
             STANDARD PLAN
         </div>
@@ -111,7 +110,7 @@
         <button class="buy">BUY NOW</button>
     </div>
     <div class="corporate">
-        <div class="planBackground"></div>
+        <div class="grid"></div>
         <div class="planName">
             CORPORATE PLAN
         </div>
@@ -130,8 +129,8 @@
 </div>
 
 <div class="fifthPart">
-    <div class="thirdBackground">
-        <div class="backgroundColor"></div>
+    <div class="notebook">
+        <div class="notebookColor"></div>
     </div>
     <div class="advertise">
         <p class="firstAdv">TRY THE BEST APP IN THE MARKET</p>
