--- a/page2.html
+++ b/page2.html
@@ -5,8 +5,8 @@
     <title>page2</title>
 </head>
 <body>
-    <h1>About</h1>
-    <h1>Projects</h1>
-    <h1>Services</h1>
+    <h1 id="About">About</h1>
+    <h1 id="Projects">Projects</h1>
+    <h1 id="Services">Services</h1>
 </body>
 </html>
