--- a/page1.html
+++ b/page1.html
@@ -9,7 +9,7 @@
 <body>
 
 <ul>
-    <li>MENU</li>
+    <li class="menu">MENU</li>
     <li class="rightPart"><a href="page2.html#Services">Services</a></li>
     <li class="rightPart"><a href="page2.html#Projects">Projects</a></li>
     <li class="rightPart"><a href="page2.html#About">About</a></li>
@@ -65,7 +65,7 @@
 <div class="thirdPart">
     <p class="quote">"I COULDN'T HAVE ASKED FOR MORE THAN THIS. MYBIZ IS THE NEXT KILLER APP."</p>
     <div class="author">
-        <span>John Doe</span>, CEO & Founder, MyBiz
+        <span><strong>John Doe</strong></span>, CEO & Founder, MyBiz
     </div>
 </div>
 
