--- a/HW3/page1.html
+++ b/HW3/page1.html
@@ -36,7 +36,7 @@
             AMAZING FEATURE #1
         </h4>
         <p>
-            Lorem ipsum sit amet, consectetur adipiscing elit. Sed malesuada faucibus ex nec ultricles. Donec mattis egestas nisi non pretium. Suspendisse nec eros ut erat facillisis maximus. In congue et leo in varlus.
+            Lorem ipsum sit amet, consectetur adipiscing elit.<br> Sed malesuada faucibus ex nec ultricles. Donec mattis egestas nisi non pretium. Suspendisse nec eros ut erat facillisis maximus. In congue et leo in varlus.
             Vestibulum sit amet felis ornare, commodo orci ut, feugiat lorem.
         </p>
     </div>
@@ -46,7 +46,7 @@
             AMAZING FEATURE #2
         </h4>
         <p>
-            Lorem ipsum sit amet, consectetur adipiscing elit. Sed malesuada faucibus ex nec ultricles. Donec mattis egestas nisi non pretium. Suspendisse nec eros ut erat facillisis maximus. In congue et leo in varlus.
+            Lorem ipsum sit amet, consectetur adipiscing elit.<br> Sed malesuada faucibus ex nec ultricles. Donec mattis egestas nisi non pretium. Suspendisse nec eros ut erat facillisis maximus. In congue et leo in varlus.
             Vestibulum sit amet felis ornare, commodo orci ut, feugiat lorem.
         </p>
     </div>
@@ -56,7 +56,7 @@
             AMAZING FEATURE #3
         </h4>
         <p>
-            Lorem ipsum sit amet, consectetur adipiscing elit. Sed malesuada faucibus ex nec ultricles. Donec mattis egestas nisi non pretium. Suspendisse nec eros ut erat facillisis maximus. In congue et leo in varlus.
+            Lorem ipsum sit amet, consectetur adipiscing elit.<br> Sed malesuada faucibus ex nec ultricles. Donec mattis egestas nisi non pretium. Suspendisse nec eros ut erat facillisis maximus. In congue et leo in varlus.
             Vestibulum sit amet felis ornare, commodo orci ut, feugiat lorem.
         </p>
     </div>
@@ -143,19 +143,19 @@
     <div class="webName">MY BIZ</div>
     <div class="webAddress">224 Grant Ave, Redondo Beach, CA, 90278 310.555.1212 Ext. 3 for Business Needs</div>
     <div class="icons">
-        <a href="https://www.facebook.com">
+        <a href="https://www.facebook.com" class="facebook">
             <img src="images/facebook.png" alt="facebook">
         </a>
-        <a href="https://www.twitter.com">
+        <a href="https://www.twitter.com" class="twitter">
             <img src="images/twitter.png" alt="twitter">
         </a>
-        <a href="https://www.instagram.com">
+        <a href="https://www.instagram.com" class="instagram">
             <img src="images/instagram.png" alt="instagram">
         </a>
-        <a href="https://www.youtube.com">
+        <a href="https://www.youtube.com" class="youtube">
             <img src="images/youtube.png" alt="youtube">
         </a>
-        <a href="https://www.google.com">
+        <a href="https://www.google.com" class="google">
             <img src="images/googleplus.png" alt="google">
         </a>
     </div>
