--- a/HW3/page1.html
+++ b/HW3/page1.html
@@ -95,7 +95,7 @@
     <div class="standard">
         <div class="grid"></div>
         <div class="planName">
-            STANDARD PLAN
+            STANDART PLAN
         </div>
         <p>
             Plan Amazing feature #1<br>
