--- a/HW6/BackEnd/static/WeatherSearch.html
+++ b/HW6/BackEnd/static/WeatherSearch.html
@@ -11,7 +11,6 @@
     <script src="https://code.highcharts.com/modules/exporting.js"></script>
     <script src="https://code.highcharts.com/modules/export-data.js"></script>
     <script src="https://code.highcharts.com/modules/accessibility.js"></script>
-    <script src="https://code.highcharts.com/highcharts.js"></script>
     <script src="https://code.highcharts.com/modules/windbarb.js"></script>
     <script src="https://code.highcharts.com/modules/pattern-fill.js"></script>
 
@@ -40,11 +39,70 @@
         <div class="state">
             <span>State</span><span class="star">*</span><br>
             <label>
-                <select class="stateSelect" name="state" id="state">
-                    <option value="test1">California</option>
-                    <option value="test2">test2</option>
-                    <option value="test3">test3</option>
-                    <option value="test4">test4</option>
+                <select class="stateSelect" name="state" id="state" required>
+                    <option class="a-prompt" value="">Select your state</option>
+                    <option value="AL">Alabama</option>
+                    <option value="AK">Alaska</option>
+                    <option value="AS">American Samoa</option>
+                    <option value="AZ">Arizona</option>
+                    <option value="AR">Arkansas</option>
+                    <option value="CA">California</option>
+                    <option value="CO">Colorado</option>
+                    <option value="CT">Connecticut</option>
+                    <option value="DE">Delaware</option>
+                    <option value="DC">District of Columbia</option>
+                    <option value="FM">Federated States of Micronesia</option>
+                    <option value="FL">Florida</option>
+                    <option value="GA">Georgia</option>
+                    <option value="GU">Guam</option>
+                    <option value="HI">Hawaii</option>
+                    <option value="ID">Idaho</option>
+                    <option value="IL">Illinois</option>
+                    <option value="IN">Indiana</option>
+                    <option value="IA">Iowa</option>
+                    <option value="KS">Kansas</option>
+                    <option value="KY">Kentucky</option>
+                    <option value="LA">Louisiana</option>
+                    <option value="ME">Maine</option>
+                    <option value="MH">Marshall Islands</option>
+                    <option value="MD">Maryland</option>
+                    <option value="MA">Massachusetts</option>
+                    <option value="MI">Michigan</option>
+                    <option value="MN">Minnesota</option>
+                    <option value="MS">Mississippi</option>
+                    <option value="MO">Missouri</option>
+                    <option value="MT">Montana</option>
+                    <option value="NE">Nebraska</option>
+                    <option value="NV">Nevada</option>
+                    <option value="NH">New Hampshire</option>
+                    <option value="NJ">New Jersey</option>
+                    <option value="NM">New Mexico</option>
+                    <option value="NY">New York</option>
+                    <option value="NC">North Carolina</option>
+                    <option value="ND">North Dakota</option>
+                    <option value="MP">Northern Mariana Islands</option>
+                    <option value="OH">Ohio</option>
+                    <option value="OK">Oklahoma</option>
+                    <option value="OR">Oregon</option>
+                    <option value="PW">Palau</option>
+                    <option value="PA">Pennsylvania</option>
+                    <option value="PR">Puerto Rico</option>
+                    <option value="RI">Rhode Island</option>
+                    <option value="SC">South Carolina</option>
+                    <option value="SD">South Dakota</option>
+                    <option value="TN">Tennessee</option>
+                    <option value="TX">Texas</option>
+                    <option value="UT">Utah</option>
+                    <option value="VT">Vermont</option>
+                    <option value="VI">Virgin Islands</option>
+                    <option value="VA">Virginia</option>
+                    <option value="WA">Washington</option>
+                    <option value="WV">West Virginia</option>
+                    <option value="WI">Wisconsin</option>
+                    <option value="WY">Wyoming</option>
+                    <option value="AA">Armed Forces - AA</option>
+                    <option value="AE">Armed Forces - AE</option>
+                    <option value="AP">Armed Forces - AP</option>
                 </select>
             </label>
         </div>
@@ -78,56 +136,11 @@
 
 <div id="weatherDetail" class="weatherDetail"
      style="top: 600px; position: relative; width: 600px; font-family: 'Roboto',sans-serif">
-    <!--    <div id="detailTitle" class="detailTitle" style="text-align: center;">-->
-    <!--        <p style="font-size: 46px; font-weight: 300; margin-top: 3px; margin-bottom: 0">Daily Weather Detail</p>-->
-    <!--        <hr style="width: 450px; color: white; margin-top: 15px">-->
-    <!--    </div>-->
-    <!--    <div id="detailCard" class="detailCard"-->
-    <!--         style="margin-top: 30px; background-image: linear-gradient(white, #3a4f75); width: 600px; position: absolute;">-->
-    <!--        <img src="../static/images/drizzle.svg" height="200px" width="200px"-->
-    <!--             style="float: right; margin-right: 20px; margin-top: 0">-->
-    <!--        <p style="color: #3b4f76; font-size: 30px; margin: 25px 0 0 20px">Wednesday, 08 Sep 2021</p>-->
-    <!--        <p style="color: #3b4f76; font-size: 30px; margin: 20px 0 0 20px">Drizzle</p>-->
-    <!--        <p style="color: #3b4f76; font-size: 36px; margin: 20px 0 0 20px">81.3°F/64.98°F</p>-->
-    <!--        <div style="display: flex; width: 600px">-->
-    <!--            <div style="font-size: 22px; color: white; width: 60%; text-align: right">-->
-    <!--                <p style="margin: 30px 0 0 0">Precipitation:&nbsp</p>-->
-    <!--                <p style="margin: 10px 0 0 0;">Chance of Rain:&nbsp</p>-->
-    <!--                <p style="margin: 10px 0 0 0;">Wind Speed:&nbsp</p>-->
-    <!--                <p style="margin: 10px 0 0 0;">Humidity:&nbsp</p>-->
-    <!--                <p style="margin: 10px 0 0 0;">Visibility:&nbsp</p>-->
-    <!--                <p style="margin: 10px 0 25px 0;">Sunrise/Sunset:&nbsp</p>-->
-    <!--            </div>-->
-    <!--            <div style="font-size: 22px; color: white;">-->
-    <!--                <p style="margin: 30px 0 0 0;">Test</p>-->
-    <!--                <p style="margin: 10px 0 0 0;">Test</p>-->
-    <!--                <p style="margin: 10px 0 0 0;">Test</p>-->
-    <!--                <p style="margin: 10px 0 0 0;">Test</p>-->
-    <!--                <p style="margin: 10px 0 0 0;">Test</p>-->
-    <!--                <p style="margin: 10px 0 25px 0;">Test</p>-->
-    <!--            </div>-->
-    <!--        </div>-->
-    <!--    </div>-->
 </div>
 
 <div id="weatherChart" class="weatherChart"
      style="top: 1150px; position: relative; width: 900px; font-family: 'Roboto',sans-serif; left:-150px;">
-    <!--        <div id="chartTitle" class="chartTitle" style="text-align: center;">-->
-    <!--            <p style="font-size: 46px; font-weight: 300; margin-top: 3px; margin-bottom: 0">Weather Charts</p>-->
-    <!--            <hr style="width: 450px; color: white; margin-top: 15px">-->
-    <!--            <img src="../static/images/point-down-512.png" width="50px" height="50px" onclick="temperatureRange()">-->
-    <!--        </div>-->
-    <figure class="temperature-figure">
-        <div id="tempContainer"></div>
-    </figure>
 
-    <figure class="highcharts-figure">
-        <div id="container">
-            <div id="loading">
-                <i class="fa fa-spinner fa-spin"></i>
-            </div>
-        </div>
-    </figure>
 </div>
 
 </body>
