complete the second chart

--- a/HW6/BackEnd/static/WeatherSearch.html
+++ b/HW6/BackEnd/static/WeatherSearch.html
@@ -39,7 +39,7 @@
         <div class="state">
             <span>State</span><span class="star">*</span><br>
             <label>
-                <select class="stateSelect" name="state" id="state" required>
+                <select class="stateSelect" name="state" id="state" required style="font-weight: 300;">
                     <option class="a-prompt" value="">Select your state</option>
                     <option value="AL">Alabama</option>
                     <option value="AK">Alaska</option>
@@ -100,9 +100,6 @@
                     <option value="WV">West Virginia</option>
                     <option value="WI">Wisconsin</option>
                     <option value="WY">Wyoming</option>
-                    <option value="AA">Armed Forces - AA</option>
-                    <option value="AE">Armed Forces - AE</option>
-                    <option value="AP">Armed Forces - AP</option>
                 </select>
             </label>
         </div>
@@ -140,6 +137,13 @@
 
 <div id="weatherChart" class="weatherChart"
      style="top: 1150px; position: relative; width: 900px; font-family: 'Roboto',sans-serif; left:-150px;">
+</div>
+
+<div id="firstChart" style="position: relative; text-align: center; top: 1150px; width: 1000px; left:-200px;">
+
+</div>
+
+<div id="secondChart" style="position: relative; text-align: center; top: 1150px; width: 1000px; left:-200px;">
 
 </div>
 
