--- a/un57n1xw.html
+++ b/un57n1xw.html
@@ -24,7 +24,10 @@ th, td {
   </tr>
   <tr>
     <td>Link to Homework #5</td>
-    <td><a href= "https://flaskbackend-1998.wl.r.appspot.com/">Link to Homework #6</a></td>
+    <td>
+      <a href= "https://flaskbackend-1998.wl.r.appspot.com/">Link to Homework #6</a><br>
+      <a href= "https://flaskbackend-1998.wl.r.appspot.com/search?location=34.0030,-118.2863">Link to Homework #6 Valid Query</a>
+    </td>
   </tr>
   <tr>
     <td>Link to Homework #7</td>
