--- a/HW8/FrontEnd/src/index.html
+++ b/HW8/FrontEnd/src/index.html
@@ -18,6 +18,8 @@
   <script src="https://code.highcharts.com/modules/accessibility.js"></script>
 </head>
 <body>
-  <app-root></app-root>
+  <app-root>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDInz2_kjtD__RQh6w_RxTmi7-8jG0S6ww" async defer></script>
+  </app-root>
 </body>
 </html>
