--- a/un57n1xw.html
+++ b/un57n1xw.html
@@ -31,7 +31,7 @@ th, td {
   </tr>
   <tr>
     <td>Link to Homework #7</td>
-    <td><a href= "ScrambleThisName.html">Link to Homework #8</a></td>
+    <td><a href= "https://weathersearch-1998.wl.r.appspot.com">Link to Homework #8</a></td>
   </tr>
   <tr>
     <td>Link to Homework #9</td>
